--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,13 @@
     <meta name="keywords" content="外匯總分行交易系統, 外匯, 衍生性金融商品, 銀行交易系統" />
 
     <!-- timeline css 引用-->
-    <link rel="stylesheet" type="text/css" href="./static/CSS/time.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/swiper.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/starter-template.css">
+    <link rel="stylesheet" type="text/css" href="../static/CSS/time.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/swiper.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/starter-template.css">
 
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link href="../static/CSS/bootstrap.min.css" rel="stylesheet"
 
     <!-- Webpage Title -->
     <title>時代財金資訊 Moderntimes</title>
@@ -29,14 +28,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-    <link href="./static/css/bootstrap.css" rel="stylesheet">
-    <link href="./static/css/fontawesome-all.css" rel="stylesheet">
-    <link href="./static/css/swiper.css" rel="stylesheet">
-    <link href="./static/css/magnific-popup.css" rel="stylesheet">
-    <link href="./static/css/styles.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/fontawesome-all.css" rel="stylesheet">
+    <link href="../static/css/swiper.css" rel="stylesheet">
+    <link href="../static/css/magnific-popup.css" rel="stylesheet">
+    <link href="../static/css/styles.css" rel="stylesheet">
 
     <!-- Favicon  -->
-    <link rel="icon" href="./static/images/favicon.ico">
+    <link rel="icon" href="..static/images/favicon.ico">
 </head>
 
 
