--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,9 @@
 
 
     <!-- Bootstrap CSS -->
-    <link href="../static/CSS/bootstrap.min.css" rel="stylesheet"
-
-    <!-- Webpage Title -->
+    <link href="../static/CSS/bootstrap.min.css" rel="stylesheet" >
+    
     <title>時代財金資訊 Moderntimes</title>
-
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
@@ -35,7 +33,7 @@
     <link href="../static/css/styles.css" rel="stylesheet">
 
     <!-- Favicon  -->
-    <link rel="icon" href="..static/images/favicon.ico">
+    <link rel="icon" href="../static/images/favicon.ico" />
 </head>
 
 
@@ -50,10 +48,8 @@
 
             <!-- Image Logo -->
             <a class="navbar-brand logo-image" href="index.html">
-                <!-- <img src="./static/images/logo1_ModernTimes_341x75.png" alt="時代財金資訊" width="1000" height="30"
+                <!-- <img src="../static/images/logo1_ModernTimes_341x75.png" alt="時代財金資訊" height="40" width="10"
                     class="d-inline-block align-text-top"> -->
-                <img src="./static/images/ModernTimes1_341x75.png" alt="時代財金資訊" height="40" width="30"
-                    class="d-inline-block align-text-top">
                 時代財金資訊 ModernTimes
             </a>
 
@@ -105,16 +101,18 @@
             <div class="row">
                 <div class="col-lg-9">
                     <div class="text-container">
+                        <h1 class="h1-large">「外匯匯利率掛牌系統」</h1>
                         <h1 class="h1-large">「總分行外匯議價系統」</h1>
                         <h1 class="h1-large">「整合即時資訊源運用」</h1>
                         <h1 class="h1-large">「即時部位 mark to market」</h1>
-                        <p class="p-large">專業整合即時資訊源 前中後台運用 臺灣第一品牌</p>
+                        <p class="p-large">專業整合即時資訊源，完全自動化運算，金融機構前中後台整合運用 </p>
+                        <p class="p-large">臺灣第一品牌</p>
                         <a class="btn-solid-lg page-scroll" href="#about">公司簡介</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-3">
                     <div class="text-container">
-                        <img src="./static/images/ModernTimes_341x75.jpg" alt="時代財金資訊"
+                        <img src="../static/images/ModernTimes1_341x75.png" alt="時代財金資訊"
                             class="d-inline-block align-text-top">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
