--- a/templates/index.html
+++ b/templates/index.html
@@ -36,20 +36,12 @@
     <link rel="icon" href="../static/images/favicon.ico" />
 </head>
 
-
 <body data-spy="scroll" data-target=".fixed-top">
-
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container">
 
-            <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Gemdev</a> -->
-
-            <!-- Image Logo -->
             <a class="navbar-brand logo-image" href="index.html">
-                <!-- <img src="../static/images/logo1_ModernTimes_341x75.png" alt="時代財金資訊" height="40" width="10"
-                    class="d-inline-block align-text-top"> -->
                 時代財金資訊 ModernTimes
             </a>
 
@@ -57,7 +49,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
   
-            <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+            <div class="navbar-collapse offcanvas-collapse" id="navbars">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
@@ -66,7 +58,7 @@
                         <a class="nav-link" href="#about">公司簡介</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#DIR">品質</a>
+                        <a class="nav-link" href="#qu">品質</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#milestone ">大記事</a>
@@ -80,9 +72,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">聯絡方式</a>
                     </li>
-
                     <li class="nav-item">
-                        <a class="nav-link" href=""> </a>
+                        <a class="nav-link" href="login">    </a>
                     </li>
                 </ul>
             </div> <!-- end of navbar-collapse -->
@@ -107,13 +98,13 @@
                         <h1 class="h1-large">「即時部位 mark to market」</h1>
                         <p class="p-large">專業整合即時資訊源，完全自動化運算，金融機構前中後台整合運用 </p>
                         <p class="p-large">臺灣第一品牌</p>
-                        <a class="btn-solid-lg page-scroll" href="#about">公司簡介</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-3">
                     <div class="text-container">
                         <img src="../static/images/ModernTimes1_341x75.png" alt="時代財金資訊"
                             class="d-inline-block align-text-top">
+                        <a class="btn-solid-lg page-scroll" href="#about">公司簡介</a>
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -169,7 +160,7 @@
 
     <!--Carousel slides-->
     <!--分隔區段:避免跟下一段連在一起-->
-    <div class="starter-template" ID="DIR">
+    <div class="starter-template" ID="qu">
         <div class="page-header">
             <h1 class="text-center"><strong>品質</strong></h1>
             <!--大標題-->
